tigergraph-server/4.2/user-access/sso.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)[Next](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
  *     * [TigerGraph DB Release Notes](https://docs.tigergraph.com/tigergraph-server/4.2/release-notes/)
  *     * [Architecture](https://docs.tigergraph.com/tigergraph-server/4.2/intro/internal-architecture)
      * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/4.2/intro/transaction-and-acid)
      * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/4.2/intro/continuous-availability-overview)
  *     * Get Started
      * [Installation](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/)
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/docker)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/linux)
          * [Hardware and Software Requirements](https://docs.tigergraph.com/tigergraph-server/4.2/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/4.2/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/4.2/installation/post-install-check)
        * [On Kubernetes](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/kubernetes)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/gcp)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/4.2/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/4.2/installation/change-port)
        * [Change IP or Hostname](https://docs.tigergraph.com/tigergraph-server/4.2/installation/change-ip-or-hostname)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/4.2/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/4.2/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/using-a-remote-gsql-client)
        * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/)
  *     * [Clustering](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/)
      * Cluster Resizing
        * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/expand-a-cluster)
        * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/shrink-a-cluster)
        * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/repartition-a-cluster)
        * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/remove-failed-node)
        * [Replace a Node](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
      * [Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/crr-index)
        * [Set Up Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/set-up-crr)
        * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/fail-over)
        * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/troubleshooting)
        * [Cross-Region Replication FAQ](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/crr-faq)
      * [High Availability](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-overview)
        * [High Availability Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-cluster)
        * [Region Aware Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/region-aware)
        * [GSQL Server HA](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-for-gsql-server)
        * [Application Server HA](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-for-application-server)
      * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/cluster-commands)
  *     * [Set Up Data Connectors](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/data-loading-overview)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-local-files)
      * [from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-cloud)
      * [from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-warehouse)
      * [from External Kafka](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-kafka)
        * [Avro Data Validation](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/avro-validation-with-kafka)
        * [Kafka SSL Security Guide](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/kafka-ssl-security-guide)
      * [from Spark](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-spark-dataframe)
      * [to Spark](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/read-to-spark-dataframe)
      * [Externalize Kafka Configs](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/externalizing-kafka-configs)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/manage-data-source)
      * [Data Loading V2 (Beta)](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/data-loading-v2)
  *     * [Querying](https://docs.tigergraph.com/tigergraph-server/4.2/data-querying/README)
      * [Define a Graph Schema](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/database-definition)
  *     * [Manage Your Database](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/)
      * [GADMIN Utility](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-commands)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/ldap)
          * [OIDC JWT Authentication](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/jwt-token)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/user-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/access-control-model)
          * [Fine-Grained Query Privileges](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/fine-grained-query-privileges)
            * [Migrate Query Privileges from 3.x to 4.1](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/query-privilege-migration)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/role-management)
          * [Row Policies](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/row-policy-overview)
            * [Key Concepts](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/rbac-row-policy)
            * [Set Up Row Policy](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/setup-row-policy)
          * [Access Control Lists (ACLs) (Deprecated)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/acl-management)
      * [Backup and Export](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/backup-cluster)
        * [Incremental Backup](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/incremental-backup)
        * [Online Backup](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/online-backup)
        * Restore
          * [Restore](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/restore-backup-same)
          * [Restore to a Different Cluster](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/restore-cross-cluster)
          * [Point-in-Time Restore](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/point-in-time-restore)
        * Export/Import
          * [Database Import/Export All Graphs](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/database-import-export)
          * [Import/Export Individual Graphs](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/single-graph-import-export)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/gbar-legacy)
        * [Change Data Capture (CDC)](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-overview)
          * [CDC Setup](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-setup)
          * [CDC Message Examples](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-message-example)
          * [CDC Monitoring and Reset](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-state-monitoring)
      * [Kubernetes](https://docs.tigergraph.com/tigergraph-server/4.2/kubernetes/)
        * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/4.2/kubernetes/k8s-operator/)
      * [Logs](https://docs.tigergraph.com/tigergraph-server/4.2/troubleshooting/log-files)
      * [Resources and Processes](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/resource-and-process-mgmt)
        * [Memory Management](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/memory-management)
        * [Service Management](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/workload-management)
        * [Using gadmin](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-with-gadmin)
        * [Metrics Reports](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/system-metrics)
      * [Security](https://docs.tigergraph.com/tigergraph-server/4.2/security/)
        * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/4.2/security/audit-privileged-actions)
        * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/4.2/security/encrypting-connections)
        * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/4.2/security/encrypting-data-at-rest)
        * [File Input Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/gsql-file-input-policy)
        * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/file-output-policy)
        * [Login Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/login-protection)
        * [Password Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/password-policy)
  *     * References
      * [Best Practices](https://docs.tigergraph.com/tigergraph-server/4.2/additional-resources/best-practice-guides/best-practices-overview)
      * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/4.2/reference/configuration-parameters)
      * [gadmin Commands](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-commands)
      * [REST Endpoints](https://docs.tigergraph.com/tigergraph-server/4.2/API/)
        * [GSQL Endpoints](https://docs.tigergraph.com/tigergraph-server/4.2/API/gsql-endpoints)
        * [RESTPP & Infra Endpoints](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints)
        * [Upsert Data](https://docs.tigergraph.com/tigergraph-server/4.2/API/upsert-rest)
      * [RBAC Object-Based Privileges](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/row-policy-privileges-table)
        * [RBAC Row Policy EBNF](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/row-policy-ebnf)
        * [List of Legacy Privilege Syntax](https://docs.tigergraph.com/tigergraph-server/4.2/reference/list-of-privileges)
      * [List of Ports](https://docs.tigergraph.com/tigergraph-server/4.2/reference/ports)
      * [Return codes](https://docs.tigergraph.com/tigergraph-server/4.2/reference/return-codes)
      * [Troubleshooting and FAQs](https://docs.tigergraph.com/tigergraph-server/4.2/troubleshooting/troubleshooting-guide)
      * More References
        * [Compare TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/4.2/intro/comparison-of-editions)
        * [Documentation for Legacy Versions](https://docs.tigergraph.com/tigergraph-server/4.2/additional-resources/legacy-tg-versions)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)
        * [TigerGraph Glossary](https://docs.tigergraph.com/tigergraph-server/4.2/reference/glossary)
        * [TigerGraph Release And Patch Process](https://docs.tigergraph.com/tigergraph-server/4.2/intro/release-process)


TigerGraph DB 4.2 Pre
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
  * [Manage Your Database](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/)
  * [Access Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/)
  * Authentication
  * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/4.2/modules/user-access/pages/sso.adoc)
### Contents
  * [Before you begin](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_before_you_begin)
  * [1. Configure Identity Provider](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_identity_provider)
  * [Okta](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_okta)
  * [Auth0](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_auth0)
  * [Azure AD](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_azure_ad)
  * [PingFederate](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_pingfederate)
  * [Active Directory Federation Services (AD FS)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_active_directory_federation_services_ad_fs)
  * [2. Enable single sign-on in TigerGraph](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_enable_single_sign_on_in_tigergraph)
  * [2.1. Navigate to SSO page](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_navigate_to_sso_page)
  * [2.2. Update service provider URL](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_update_service_provider_url)
  * [2.3. Prepare service provider certificate and private key](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_prepare_service_provider_certificate_and_private_key)
  * [2.4. Provide IDP certificate, entity ID, and URLs](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_provide_idp_certificate_entity_id_and_urls)
  * [2.5. Configure security options](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_security_options)
  * [2.6. Command-line options](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_command_line_options)
  * [3. Create user groups with proxy rules to authorize single sign-on users](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_create_user_groups_with_proxy_rules_to_authorize_single_sign_on_users)
  * [3.1. Required privilege](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_required_privilege)
  * [3.2. Match Strategy Extensions](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_match_strategy_extensions)
  * [4. Test single sign-on](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_test_single_sign_on)
  * [Common errors](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_common_errors)
  * [User has no access to any graph](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_user_has_no_access_to_any_graph)
  * ["Login failed. Please contact system admin."](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_login_failed_please_contact_system_admin)


# Single Sign-On
### Contents
  * [Before you begin](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_before_you_begin)
  * [1. Configure Identity Provider](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_identity_provider)
  * [Okta](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_okta)
  * [Auth0](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_auth0)
  * [Azure AD](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_azure_ad)
  * [PingFederate](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_pingfederate)
  * [Active Directory Federation Services (AD FS)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_active_directory_federation_services_ad_fs)
  * [2. Enable single sign-on in TigerGraph](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_enable_single_sign_on_in_tigergraph)
  * [2.1. Navigate to SSO page](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_navigate_to_sso_page)
  * [2.2. Update service provider URL](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_update_service_provider_url)
  * [2.3. Prepare service provider certificate and private key](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_prepare_service_provider_certificate_and_private_key)
  * [2.4. Provide IDP certificate, entity ID, and URLs](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_provide_idp_certificate_entity_id_and_urls)
  * [2.5. Configure security options](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_security_options)
  * [2.6. Command-line options](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_command_line_options)
  * [3. Create user groups with proxy rules to authorize single sign-on users](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_create_user_groups_with_proxy_rules_to_authorize_single_sign_on_users)
  * [3.1. Required privilege](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_required_privilege)
  * [3.2. Match Strategy Extensions](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_match_strategy_extensions)
  * [4. Test single sign-on](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_test_single_sign_on)
  * [Common errors](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_common_errors)
  * [User has no access to any graph](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_user_has_no_access_to_any_graph)
  * ["Login failed. Please contact system admin."](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_login_failed_please_contact_system_admin)


Single sign-on (SSO) enables you to use your organization’s identity provider (IDP) to authenticate users to access TigerGraph GraphStudio and Admin Portal UI.
We have verified the following IDPs that support SAML 2.0 protocol:
  * [Okta](https://www.okta.com/)
  * [Auth0](https://auth0.com/)
  * [Azure Active Directory (Azure AD)](https://docs.microsoft.com/en-us/azure/active-directory/)
  * [PingFederate](https://docs.pingidentity.com/bundle/pingfederate-110/page/ikr1564002999528.html)
  * [Active Directory Federation Services (AD FS)](https://learn.microsoft.com/en-us/windows-server/identity/active-directory-federation-services)


For supporting additional IDPs, please contact sales@tigergraph.com and submit a feature request.
To set up single sign-on, you need to perform three steps :
  1. Configure your identity provider to create a TigerGraph application.
  2. Provide information from your identity provider to enable TigerGraph single sign-on.
  3. Create user groups with proxy rules to authorize single sign-on users.


## [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_before_you_begin)Before you begin
  * Ensure that you can access GraphStudio UI through a web browser using the URL: http://tigergraph-machine-hostname:14240
    * If you enabled SSL connection, change `http` to `https`. If you changed the Nginx port of the TigerGraph system, replace 14240 with the port you have set.
  * Ensure that you have [enabled GSQL authentication by changing the password of the default user](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/enabling-user-authentication#_enable_gsql_authentication). If you don’t enable GSQL authentication, SSO configuration will not work and any user will be logged in automatically.


During the SSO authentication process, TigerGraph sends a response with a large header to confirm the result of the authentication request. If you use any middleware such as an Nginx load balancer between TigerGraph and your IDP, make sure that your middleware is able to handle the size of the responses. For example, if using Nginx, make sure proxy buffering is turned on.   
---  
## [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_identity_provider)1. Configure Identity Provider
Below are detailed instructions for identity providers that we have verified. Please consult your IT or security department for how to configure the identity provider for your organization if it is not listed here.
After you finish configuring your identity provider, you will get the following:
  * An Identity Provider single sign-on URL
  * An Identity Provider Entity ID
  * an X.509 certificate file `idp.cert`. You need these 3 things to configure TigerGraph next.


### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_okta)Okta
[Create an Application Integration in Okta](https://developer.okta.com/docs/guides/build-sso-integration/saml2/create-your-app/) for your TigerGraph application. Below are the Assertion Consumer Service URL / Single sign on URL , and SP Entity ID required for this process:
  * Assertion Consumer Service URL/Single sign on URL:
```
http://<tigergraph-machine-hostname>:14240/api/auth/saml/acs
```

  * SP Entity ID URL:
```
http://<tigergraph-machine-hostname>:14240/gsql/v1/saml/meta
```



### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_auth0)Auth0
  1. [Register TigerGraph as a Single-Page web application in Auth0](https://auth0.com/docs/get-started/create-apps/single-page-web-apps).
  2. [Configure Auth0 as SAML Identity provider](https://auth0.com/docs/configure/saml-configuration/configure-auth0-saml-identity-provider#configure-saml-sso-in-auth0). You will need to enter the following information when following Auth0’s guide:
     * Application Callback URL: http://<tigergraph-machine-hostname>:14240/api/auth/saml/acs`
     * When downloading the certificate from Auth0, choose **`.cer`**format instead of`.pem` format.


### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_azure_ad)Azure AD
  1. Log in to [Azure Active Directory Admin Center](https://aad.portal.azure.com/) as an Admin user. In the left menu, select **Enterprise applications** **New Application**.
![Screenshot of Azure Active Directory with the New Application option highlighted](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/azure-new-application.png)
  2. In the top left corner, click **Create your own application**.
![Screenshot of the Create your own application button in Azure](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/azure-create-app.png)
In the form that appears on the right side of the page, fill in the name of your application and choose **Integrate any other application you don’t find in the gallery (Non-gallery)**. This creates the application and takes you to the application page.
  3. Click **Users and groups** on the left pane, add the users or groups you want to give access to TigerGraph, choose the appropriate role, and click **Assign**.
![Screenshot highlighting the Add user/group option](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/azure-sso-user-group.png)
  4. After adding users and groups, click **Single sign-on** and choose **SAML**.
![Screenshot highlighting the SAML option](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/azure-saml.png)
This takes you to a page titled "Set up single sign-on with SAML".
  5. Fill in **Identifier (Entity ID)** and **Reply URL** with the information below. Replace `<tigergraph-machine-hostname>` with the host name of your TigerGraph instance:
     * Identifier (Entity ID): `https://<tigergraph-machine-hostname>:14240/gsql/v1/saml/meta`
     * Reply URL: `https://<tigergraph-machine-hostname>:14240/api/auth/saml/acs`
  6. After filling in the Entity ID and Reply URL, click **Edit** for **SAML Signing Certificate** , and choose **Sign SAML Assertion and Response**. Click **Save** and download certificate (base64).
     * We recommend signing both assertion and response for maximum security. However, you may choose to only sign one of them, but you need to match this with your SSO settings in TigerGraph.
  7. Under "Set up <Application name>", Azure AD provides a login URL, an Azure AD identifier, and a logout URL. These items are used in the next steps to configure single sign-on in TigerGraph.


### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_pingfederate)PingFederate
#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_prerequisites)Prerequisites
  * You have a running PingFederate server with the [required ports](https://docs.pingidentity.com/bundle/pingfederate-110/page/rnm1564002959599.html) available.
  * You have [created users within PingFederate](https://docs.pingidentity.com/bundle/pingfederate-110/page/uwm1564002973007.html) for those who are using PingFederate to sign on to TigerGraph.
  * You have [created and exported a certificate](https://docs.pingidentity.com/bundle/pingfederate-110/page/uci1564002984974.html/#qnu1585865179023) from on PingFederate.
    * The certificate’s common name must be the IP of your PingFederate server.
  * You have created a Password Credential Validator (PCV) instance.
  * You have [created an HTML Form IdP Adaptor instance](https://docs.pingidentity.com/bundle/pingfederate-110/page/nxg1564002998160.html) and [configured](https://docs.pingidentity.com/bundle/pingfederate-110/page/rpb1564002998288.html) the adaptor instance to use your PCV.


#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_procedure)Procedure
Go to the **APPLICATIONS** page in PingFederate, open **Integration** **SP Connections** , then click **Create Connection** to add a Service Provider (SP) connection to TigerGraph. Follow the instructions in the product and enter the additional information as required. There are many configuration options available in PingFederate. This guide provides an example setup. To learn about each of the available options, see [SP Connection Management](https://docs.pingidentity.com/bundle/pingfederate-110/page/ikr1564002999528.html).
  1. In this guide, we do not use a connection template for this SP connection.
  2. Choose the Browser SSO Profiles connection type on the **Connection Type** page.
  3. Check the Browser SSO option on the **Connection Options** page and choose the SAML 2.0 protocol.
  4. Skip the **Import Metadata** step.
  5. For **General Info** , choose a name to name your connection. Refer to the following for Partner’s Entity ID and Base URL:
     * Partner’s Entity ID (Connection ID): `http://<tigergraph-machine-hostname>:14240/gsql/v1/saml/meta`
     * Base URL: `http://<tigergraph-machine-hostname>:14240`
  6. Click **Configure Browser SSO** on the Browser SSO page to configure browser SSO.
     * Check **IdP-Initiated SSO** and **SP-Initiated SSO** on the **SAML Profiles** page.
     * Choose **Standard Identity Mapping** option for configuring assertion creation.
       * Change the Subject Name Format for the SAML_SUBJECT field to `urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified` or `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`
       * In **Authentication Source Mapping** , click **Map New Adaptor Instance** and choose an adaptor instance. Follow the in-product instructions to finish configuring the adaptor instance.
     * Configure **Protocol Settings**.
       * For **Protocol Settings** **Assertion Consumer Service URL** , set Binding to "POST". For Endpoint URL, fill in `http://<tigergraph-machine-hostname>:14240/api/auth/saml/acs`.
       * For **Allowable SAML Bindings** , check `POST` and `REDIRECT`.
       * Configure signature policy and encryption policy tp suit your needs.
  7. Configure credentials. On the **Credentials** page, click **Configure Credentials** , and choose a certificate to be the signing certificate. This must be the same certificate that you upload to TigerGraph later.
  8. Verify the details of your SP connection and click **Save**.


After setting up the SP connection, return to the **SP Connections** page, find the connection and click **Action** **Export Metadata**. The exported XML file provides the information you need to configure single sign-on in TigerGraph.
  * IDP’s SSO URL: `Location attribute` of the md:SingleSignOnService` element in the XML file.
  * Entity ID: `entityID` attribute of the `md:EntityDescriptor` element field in the XML file.
  * Identity Provider’s X509 certificate: `ds:X509Certificate` element in the XML file. You can also export the certificate directly in PingFederate.
  * Authentication context: `md:NameIDFormat` element in the XML file.


### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_active_directory_federation_services_ad_fs)Active Directory Federation Services (AD FS)
#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_prerequisites_2)Prerequisites
  * A Windows Server which has AD FS Server configured. If this is not set up, follow these instructions to configure it: [Deploying a federation server farm](https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/deployment/deploying-a-federation-server-farm)


A configured AD FS server should belong to an AD DS (Domain Service) and have an available certificate service.   
---  
  * Ensure that you have domain administrator permissions or have domain administrator credentials available before you perform this procedure.


#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_ad_fs)Configure AD FS
  1. Create a [relying party trust](https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/operations/create-a-relying-party-trust) in AD FS.
  2. Under "Relying party identifiers", use this format, where `host` is replaced by your TigerGraph Server public IP address:


```
https://host:14240/gsql/v1/saml/meta
```

![sso config with adfs](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/sso-config-with-adfs.png)
  1. In the Endpoints tab, your URL appears under SAML Assertion Consumer Endpoints. The Trusted URL is in this format:


```
https://host:14240/api/auth/saml/acs
```

![adfs sso step 3](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/adfs-sso-step-3.png)
  1. Export the public certificate of the AD FS server for TigerGraph use. Open the AD FS Management dialog and export the Token-signing certificate
    1. Right-click the certificate → View certificate
    2. Details → Copy to file
    3. Base64 encoded X.509


![adfs sso step 4](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/adfs-sso-step-4.png)
  1. Run the following command to make the AD FS server sign SAML responses. In this example, <display name> takes the place of your actual Display Name in the Relying Party Trusts list.


```
Set-AdfsRelyingPartyTrust -TargetName <display name> -SamlResponseSignature "MessageAndAssertion"
```

  1. TigerGraph needs a required Claim Name ID to know which user is logging in successfully. Following these instructions, create a transform claim rule: [Create a rule to transform an incoming claim](https://learn.microsoft.com/en-us/windows-server/identity/ad-fs/operations/create-a-rule-to-transform-an-incoming-claim)


![adfs sso step 6](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/adfs-sso-step-6.png)
#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_tigergraph)Configure TigerGraph
After configuring AD FS as described previously, you must now configure TigerGraph to accept the connection. This is handled in Admin Portal on the SSO page. [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/4.2/admin-portal/security/sso)
  * In the field **Identity Provider’s X509 certificate** , use the certificate exported in Step #4 above.
  * For the **Identity Provider’s entity ID** , use a value in this format: (adfs.company.com means the URL of the AD FS server)


```
http://adfs.company.com/adfs/services/trust
```

  * For the **Identity Provider’s SSO URL** , use the AD FS SSO URL. In general, it uses a value in this format:


```
https://adfs.company.com/adfs/ls/
```

  * For **IDP SignonBinding** , check **Redirect**.


The final configuration should appear similar to this screenshot:
![adfs sso graphstudio example](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/adfs-sso-graphstudio-example.png)
## [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_enable_single_sign_on_in_tigergraph)2. Enable single sign-on in TigerGraph
Having configured the identity provider and obtained the identity provider’s SSO URL, entity ID and certificate, the next step is to provide the information to TigerGraph to enable single sign-on.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_navigate_to_sso_page)2.1. Navigate to SSO page
From GraphStudio home page, click **Admin Portal** in the upper right corner. In the left pane, click **Management** **Security** **SSO**. At the top of the SSO page, click the toggle to **Enable SAML-based SSO**.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_update_service_provider_url)2.2. Update service provider URL
The service provider (in this case - TigerGraph) URL is the same URL that you use to access GraphStudio.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_prepare_service_provider_certificate_and_private_key)2.3. Prepare service provider certificate and private key
Under SAML, the service provider can optionally sign the SAML requests made to the identity provider. This step configures the certificate and private key used for the signature.
According to the SAML standard trust model, a self-signed certificate is acceptable. This is different from configuring an SSL connection, where a CA-authorized certificate is considered mandatory if the system goes to production.
You can generate a self-signed private key and x-509 certificate from GraphStudio. Click the button next to the Service Provider’s private key field: **Upload file** **Self Signed** , and fill in your information to generate a self-signed private key and x-509 certificate.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_provide_idp_certificate_entity_id_and_urls)2.4. Provide IDP certificate, entity ID, and URLs
Upload the certificate you downloaded from the identity provider in the previous step, and provide the identity provider’s entity ID and single sign-on URL in the corresponding fields.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_configure_security_options)2.5. Configure security options
At the bottom of the SSO page are a list of security options you can configure for SSO:
  * Sign authentication requests before sending to Identity Provider
  * Require Identity Provider to sign [responses](https://www.samltool.com/generic_sso_res.php)
  * Require Identity Provider to sign [assertions](https://en.wikipedia.org/wiki/SAML_2.0#SAML_2.0_assertions)
  * Require Identity Provider to sign [metadata](https://en.wikipedia.org/wiki/SAML_metadata)
  * [Signature algorithm](https://en.wikipedia.org/wiki/Digital_Signature_Algorithm)
  * [Authentication context](http://docs.oasis-open.org/security/saml/v2.0/saml-authn-context-2.0-os.pdf)
    * An attribute that defines how a user must log in. This is an optional configuration. You can leave it blank if you do not want to restrict how users must log in or if you are not sure what value to provide for this field.
    * Example value: `urn:oasis:names:tc:SAML:2.0:ac:classes:Password`


Known issue: Authentication context is a required field in Admin Portal. To set this configuration to blank, log in to the server as the TigerGraph Linux user and run the following command: ```
$ gadmin config set Security.SSO.SAML.RequestedAuthnContext ""![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!
```
  
---  
It is recommended that you enable as many of the options as possible for maximum security. However, some identity providers do not support enabling certain options at the same time. Refer to your identity provider’s documentation to determine which options to use.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_command_line_options)2.6. Command-line options
Besides providing the SSO information in the UI, you also have the option of providing the information using `gadmin config` through the command-line.
Below is the list of parameters you need to configure. You can run [`gadmin config set`](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-commands#_gadmin_config_set) to configure their value non-interactively, or run `gadmin config entry Security.SSO.SAML` to configure their values interactively in the terminal.
After changing these configuration values, you must run the following `gadmin` commands:
```
gadmin config apply
gadmin restart gsql
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Name | Description | Example  
---|---|---  
Security.SSO.SAML.AssertionSigned | Require Identity Provider to sign assertions: default true | `true`  
Security.SSO.SAML.AuthnRequestSigned | Sign AuthnRequests before sending to Identity Provider: default true | `true`  
Security.SSO.SAML.BuiltinUser | The builtin user for SAML | `__GSQL__saml`  
Security.SSO.SAML.Enable | Enable SAML2-based SSO: default false | `false`  
Security.SSO.SAML.IDP.EntityId | Identity Provider Entity ID: default <http://idp.example.com> | `http://idp.example.com`  
Security.SSO.SAML.IDP.SSOUrl | single sign-on URL: default <http://idp.example.com/sso/saml> | `http://idp.example.com/sso/saml`  
Security.SSO.SAML.IDP.X509Cert | Identity Provider’s x509 Certificate filepath: default empty. You can use @/cert/file/path to pass the certificate from a file. | `nan`  
Security.SSO.SAML.MetadataSigned | Sign Metadata: default true | `true`  
Security.SSO.SAML.RequestedAuthnContext | Authentication context (comma separate multiple values) | `nan`  
Security.SSO.SAML.ResponseSigned | Require Identity Provider to sign SAML responses: default true | `true`  
Security.SSO.SAML.SP.Hostname | TigerGraph Service Provider URL: default <http://127.0.0.1:14240> | `http://127.0.0.1:14240`  
Security.SSO.SAML.SP.PrivateKey | Content of the host machine’s private key. You can use @/privatekey/file/path to pass the certificate from a file. | `nan`  
Security.SSO.SAML.SP.X509Cert | Content of the x509 Certificate: default empty. You can use @/cert/file/path to pass the certificate from a file. | `nan`  
Security.SSO.SAML.SignatureAlgorithm | Signature algorithm [rsa-sha1/rsa-sha256/rsa-sha384/rsa-sha512]: default rsa-sha256 | `rsa-sha256`  
Security.SSO.SAML.SP.SignonBinding | SAML protocol binding[POST/Redirect] to be used when returning the <Response> or sending the <LogoutRequest> message. Its value is `POST` in the general case, but `Redirect` for IDP ADFS. | `POST`  
Security.SSO.SAML.SP.LogoutBinding | SAML protocol binding[POST/Redirect] for the Single Logout Service of the SP. | `Redirect`  
## [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_create_user_groups_with_proxy_rules_to_authorize_single_sign_on_users)3. Create user groups with proxy rules to authorize single sign-on users
In order to authorize single sign-on users, you need create user groups with proxy rules and grant roles on graphs for the user groups. Proxy rules assign users who log in through SSO into proxy groups based on the attributes of the user from the identity provider’s response.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_required_privilege)3.1. Required privilege
  * `WRITE_PROXYGROUP` for creating proxy groups.
  * `WRITE_ROLE` for granting roles to users


#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_create_proxy_groups_in_admin_portal)3.1.1. Create proxy groups in Admin Portal
You can create proxy groups in Admin Portal:
  1. From Admin Portal, navigate to **Management** **Users** **Proxy Group**.
  2. Click **Add Group** , and give the group a name.
  3. Provide the attribute equation for the proxy group. If a user’s specified attribute matches the value in the equation, they will be assigned to this proxy group.


After creating the proxy group, you can start granting roles to the proxy group. All users matching the proxy rule will be granted all the privileges of that role. To learn how to grant roles, see [Role Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/role-management).
#### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_create_proxy_groups_in_gsql_shell)3.1.2. Create proxy groups in GSQL shell
You can create proxy groups with GSQL commands.
##### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_single_user_proxy)Single User Proxy
For example, if you want to create a user group `SuperUserGroup` that contains the user with nameid `admin@your.company.com` only, and grant `superuser` role to that user, you can do so with the following command:
```
GSQL > CREATE GROUP SuperUserGroup PROXY "nameid=admin@your.company.com"
GSQL > GRANT ROLE superuser TO SuperUserGroup
Role "superuser" is successfully granted to user(s): SuperUserGroup
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

##### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_user_group_proxy)User Group Proxy
Suppose you want to create a user group `HrDepartment` which corresponds to the identity provider single sign-on users having the group attribute value `hr-department`, and want to grant the queryreader role to that group on the graph HrGraph:
```
GSQL > CREATE GROUP HrDepartment PROXY "group=hr-department"
GSQL > GRANT ROLE queryreader ON GRAPH HrGraph TO HrDepartment
Role "queryreader" is successfully granted to user(s): HrDepartment
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_match_strategy_extensions)3.2. Match Strategy Extensions
As of 3.10.1, the match strategy has been extended to allow matches via regular expression.
The original match strategy has not changed.  
---  
For a regular expression match users need to add a prefix `regex:` a space after the `:` is allowed. (Ex. `regex:nameid=abc, regex:  nameid=abc`)
The prefix is case-sensitive.  
---  
Below are some examples of regular expression match strategies:
Ex: If a users `nameid` contains `abc` they will match this group.
```
GSQL > CREATE GROUP g1 PROXY "regex: nameid=abc"
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * **Match:** abc, aabc
  * **Mismatch:** abdc, abbc


Ex: If a users `nameid` contains `abc` they will also match this group.
```
GSQL > CREATE GROUP g1 PROXY "regex: nameid=^abc$"
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * **Match:** abc
  * **Mismatch:** abcc, abdc, aabc


Ex: If a users `nameid` contains `ab` they will match this group.
```
GSQL > CREATE GROUP g2 PROXY "regex: nameid=ab.*"
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * **Match:** abc, aabc, ccab
  * **Mismatch:** acb, cab


Ex: If a users `nameid` starts with `ab` they will match this group.
```
GSQL > CREATE GROUP g3 PROXY "regex:nameid=^ab.*"
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * **Match:** abc, abc123, abddd
  * **Mismatch:** acc, bca, aab


Ex: If a users `nameid` starts with `ab` and ends with `c` they will match this group.
```
GSQL > CREATE GROUP g4 PROXY "regex: nameid=^ab.*c$"
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * **Match:** abc, abdddc
  * **Mismatch:** abcd, abdcd


Ex: `\b` is the word boundary used in regular expressions. So, if a user’s `nameid` contains `abc` they will match this group.
```
GSQL > CREATE GROUP g5 PROXY "regex: group=\babc\b"
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_test_single_sign_on)4. Test single sign-on
To test if single sign-on is working, visit the GraphStudio UI in your browser. You should see a **Login with SSO** button:
![GraphStudio login web page with a button reading 'Login with SSO'.](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/11.25.png)
Click the button to navigate to your identity provider’s login portal:
  * If you are already logged in with your identity provider, you will be redirected back to GraphStudio immediately. After about 10 seconds, the verification should finish, and you are authorized to use GraphStudio.
  * If you aren’t logged in at your identity provider, you will need to log in.


After logging in successfully, you will see your single sign-on username when you click the User icon ![11.1 \(1\)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/_images/11.1%20\(1\).png) at the upper right of the GraphStudio UI.
## [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_common_errors)Common errors
Below are a few common SSO errors and how to resolve them.
### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_user_has_no_access_to_any_graph)User has no access to any graph
  * If you return to the login page and see the error message saying you do not have access to any graph, check your user group proxy rules, and roles you have granted to the groups.


### [](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso#_login_failed_please_contact_system_admin)"Login failed. Please contact system admin."
  * If your single sign-on fails with the above error message, it usually means the configuration are inconsistent between TigerGraph and your identity provider.


You can check your GSQL log to investigate. First, find your GSQL log file with the following:
```
$ gadmin log gsql
GSQL  : /home/tigergraph/tigergraph/log/gsql/log.INFO
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Then, grep the SAML authentication-related logs:
```
cat /home/tigergraph/tigergraph/log/gsql/log.INFO | grep SAMLAuth
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Focus on the latest errors. Usually the text is self-descriptive. Follow the error message and try to fix TigerGraph or your identity provider’s configuration.
If the problem persists or if you encounter any errors that are not clear, please [open a support ticket](https://tigergraph.zendesk.com/hc/en-us/).
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


